befree dataset source changed

--- a/python scripts/gad.ipynb
+++ b/python scripts/gad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "50df7d08",
    "metadata": {},
    "outputs": [
@@ -12,8 +12,16 @@
      "text": [
       "DatasetDict({\n",
       "    train: Dataset({\n",
-      "        features: ['id', 'document_id', 'passages', 'entities', 'events', 'coreferences', 'relations'],\n",
-      "        num_rows: 300\n",
+      "        features: ['id', 'document_id', 'text', 'labels'],\n",
+      "        num_rows: 4261\n",
+      "    })\n",
+      "    validation: Dataset({\n",
+      "        features: ['id', 'document_id', 'text', 'labels'],\n",
+      "        num_rows: 535\n",
+      "    })\n",
+      "    test: Dataset({\n",
+      "        features: ['id', 'document_id', 'text', 'labels'],\n",
+      "        num_rows: 534\n",
       "    })\n",
       "})\n"
      ]
@@ -23,9 +31,9 @@
     "from datasets import load_dataset\n",
     "import json\n",
     "\n",
-    "# Load the EU-ADR dataset\n",
-    "# https://huggingface.co/datasets/bigbio/euadr\n",
-    "dataset = load_dataset(\"bigbio/euadr\", \"euadr_bigbio_kb\")\n",
+    "# GAD dataset\n",
+    "# https://huggingface.co/datasets/bigbio/gad\n",
+    "dataset = load_dataset(\"bigbio/gad\", \"gad_blurb_bigbio_text\")\n",
     "\n",
     "# Inspect dataset\n",
     "print(dataset)\n",
@@ -36,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ea84bd24",
    "metadata": {},
    "outputs": [
@@ -46,49 +54,33 @@
      "text": [
       "\n",
       "--- Tree Structure ---\n",
-      "├── id: \"4\"\n",
-      "├── document_id: \"4\"\n",
-      "├── passages\n",
-      "│   ├── [0]\n",
-      "│   │   ├── id: \"5\"\n",
-      "│   │   ├── type: \"title\"\n",
-      "│   │   ├── text\n",
-      "│   │   │   └── [0]\n",
-      "│   │   │       └── \"Prevention of early postoperative seizures in patients w...\n",
-      "│   │   └── offsets\n",
-      "│   │       └── [0]\n",
-      "│   │           ├── [0]\n",
-      "│   │           │   └── 0\n",
-      "│   │           └── ... (1 more)\n",
-      "│   └── ... (1 more)\n",
-      "├── entities\n",
-      "│   ├── [0]\n",
-      "│   │   ├── id: \"7\"\n",
-      "│   │   ├── type: \"Diseases & Disorders\"\n",
-      "│   │   ├── text\n",
-      "│   │   │   └── [0]\n",
-      "│   │   │       └── \"early postoperative seizures\"\n",
-      "│   │   ├── offsets\n",
-      "│   │   │   └── [0]\n",
-      "│   │   │       ├── [0]\n",
-      "│   │   │       │   └── 14\n",
-      "│   │   │       └── ... (1 more)\n",
-      "│   │   └── normalized\n",
-      "│   │       └── []\n",
-      "│   └── ... (40 more)\n",
-      "├── events\n",
-      "│   └── []\n",
-      "├── coreferences\n",
-      "│   └── []\n",
-      "└── relations\n",
-      "    ├── [0]\n",
-      "    │   ├── id: \"30\"\n",
-      "    │   ├── type: \"SA\"\n",
-      "    │   ├── arg1_id: \"28\"\n",
-      "    │   ├── arg2_id: \"29\"\n",
-      "    │   └── normalized\n",
-      "    │       └── []\n",
-      "    └── ... (9 more)\n"
+      "├── id: \"1\"\n",
+      "├── document_id: \"1\"\n",
+      "├── text: \"Common polymorphisms in the genes @GENE$ and LOC387715 a...\n",
+      "└── labels\n",
+      "    └── [0]\n",
+      "        └── \"1\"\n",
+      "\n",
+      "--- JSON Representation ---\n",
+      "{\n",
+      "  \"id\": \"1\",\n",
+      "  \"document_id\": \"1\",\n",
+      "  \"text\": \"Common polymorphisms in the genes @GENE$ and LOC387715 are independently related to @DISEASE$ progression after adjustment for other known AMD risk factors.\",\n",
+      "  \"labels\": [\n",
+      "    \"1\"\n",
+      "  ]\n",
+      "}\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -155,8 +147,8 @@
     "print(\"\\n--- Tree Structure ---\")\n",
     "print_tree(train0)\n",
     "\n",
-    "# print(\"\\n--- JSON Representation ---\")\n",
-    "# print(parse_to_json(train0))\n"
+    "print(\"\\n--- JSON Representation ---\")\n",
+    "print(parse_to_json(train0))\n"
    ]
   },
   {
