eudar processing finished

--- a/python scripts/eudar.ipynb
+++ b/python scripts/eudar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "50df7d08",
    "metadata": {},
    "outputs": [
@@ -31,12 +31,13 @@
     "print(dataset)\n",
     "\n",
     "# Take one training sample\n",
-    "train0 = dataset[\"train\"][0]\n"
+    "train0 = dataset[\"train\"][0]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "ea84bd24",
    "metadata": {},
    "outputs": [
@@ -161,8 +162,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fd2df369",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': '7', 'Sentence': 'Prevention of <\\\\entity><\\\\entity> in patients with primary brain tumors: preliminary experience with oxcarbazepine.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with supratentorial brain tumors.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '8', 'Sentence': 'Prevention of early postoperative seizures in patients with <\\\\entity><\\\\entity>: preliminary experience with oxcarbazepine.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with supratentorial brain tumors.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '9', 'Sentence': 'Prevention of early postoperative seizures in patients with primary brain tumors: preliminary experience with <\\\\entity><\\\\entity>.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with supratentorial brain tumors.', 'Label': 'Chemicals & Drugs'}\n",
+      "{'id': '10', 'Sentence': 'Prevention of early postoperative seizures in patients with primary brain tumors: preliminary experience with oxcarbazepine.<\\\\entity><\\\\entity> are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with supratentorial brain tumors.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '11', 'Sentence': 'Prevention of early postoperative seizures in patients with primary brain tumors: preliminary experience with oxcarbazepine.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared <\\\\entity><\\\\entity> in patients with supratentorial brain tumors.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '12', 'Sentence': 'Prevention of early postoperative seizures in patients with primary brain tumors: preliminary experience with oxcarbazepine.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with <\\\\entity><\\\\entity>.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '13', 'Sentence': 'Few studies have investigated the value of pharmacological prophylaxis in the prevention of <\\\\entity><\\\\entity> in these patients and their outcome has not been consistent.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '14', 'Sentence': 'Furthermore, the efficacy of the new generation of <\\\\entity><\\\\entity> in the prophylaxis of perioperative seizures has not been assessed so far.', 'Label': 'Chemicals & Drugs'}\n",
+      "{'id': '15', 'Sentence': 'Furthermore, the efficacy of the new generation of antiepileptic agents in the prophylaxis of <\\\\entity><\\\\entity> has not been assessed so far.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '16', 'Sentence': 'We analyzed the data related to 150 patients harboring <\\\\entity><\\\\entity> with the aim to assess the efficacy of oxcarbazepine in preventing the occurrence or the recurrence of early postoperative seizures and its tolerability when it is rapidly titrated.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '17', 'Sentence': 'We analyzed the data related to 150 patients harboring supratentorial brain gliomas with the aim to assess the efficacy of <\\\\entity><\\\\entity> in preventing the occurrence or the recurrence of early postoperative seizures and its tolerability when it is rapidly titrated.', 'Label': 'Chemicals & Drugs'}\n",
+      "{'id': '18', 'Sentence': 'We analyzed the data related to 150 patients harboring supratentorial brain gliomas with the aim to assess the efficacy of oxcarbazepine in preventing the occurrence or the recurrence of <\\\\entity><\\\\entity> and its tolerability when it is rapidly titrated.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '19', 'Sentence': 'Only four patients (2.7%) experienced <\\\\entity><\\\\entity> within the first week after surgery.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '20', 'Sentence': 'Regarding adverse events in the first week, six patients (4%) showed <\\\\entity><\\\\entity>.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '21', 'Sentence': 'Persistent symptomatic <\\\\entity><\\\\entity> never occurred.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '22', 'Sentence': 'Our data showed that <\\\\entity><\\\\entity> can be a good alternative to traditional antiepileptic agents in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': 'Chemicals & Drugs'}\n",
+      "{'id': '23', 'Sentence': 'Our data showed that oxcarbazepine can be a good alternative to traditional <\\\\entity><\\\\entity> in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': 'Chemicals & Drugs'}\n",
+      "{'id': '24', 'Sentence': 'Our data showed that oxcarbazepine can be a good alternative to traditional antiepileptic agents in the prevention of <\\\\entity><\\\\entity> being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '25', 'Sentence': 'Our data showed that oxcarbazepine can be a good alternative to traditional antiepileptic agents in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no <\\\\entity><\\\\entity> during titration and during the first postoperative week) the key factors.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '26', 'Sentence': 'Moreover, <\\\\entity><\\\\entity> can be a valid choice when long-term therapy is required because of the low interaction with other drugs and the low hematological side effects.', 'Label': 'Chemicals & Drugs'}\n",
+      "{'id': '27', 'Sentence': 'Moreover, oxcarbazepine can be a valid choice when long-term therapy is required because of the low interaction with other drugs and the low <\\\\entity><\\\\entity>.', 'Label': 'Diseases & Disorders'}\n",
+      "{'id': '28', 'Sentence': 'Furthermore, the efficacy of the new generation of <\\\\entity><\\\\entity> in the prophylaxis of perioperative seizures has not been assessed so far.', 'Label': ''}\n",
+      "{'id': '29', 'Sentence': 'Furthermore, the efficacy of the new generation of antiepileptic agents in the prophylaxis of <\\\\entity><\\\\entity> has not been assessed so far.', 'Label': ''}\n",
+      "{'id': '31', 'Sentence': 'Our data showed that <\\\\entity><\\\\entity> can be a good alternative to traditional antiepileptic agents in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': ''}\n",
+      "{'id': '32', 'Sentence': 'Our data showed that oxcarbazepine can be a good alternative to traditional antiepileptic agents in the prevention of <\\\\entity><\\\\entity> being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': ''}\n",
+      "{'id': '34', 'Sentence': 'Our data showed that <\\\\entity><\\\\entity> can be a good alternative to traditional antiepileptic agents in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': ''}\n",
+      "{'id': '35', 'Sentence': 'Our data showed that oxcarbazepine can be a good alternative to traditional antiepileptic agents in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no <\\\\entity><\\\\entity> during titration and during the first postoperative week) the key factors.', 'Label': ''}\n",
+      "{'id': '37', 'Sentence': 'Moreover, <\\\\entity><\\\\entity> can be a valid choice when long-term therapy is required because of the low interaction with other drugs and the low hematological side effects.', 'Label': ''}\n",
+      "{'id': '38', 'Sentence': 'Moreover, oxcarbazepine can be a valid choice when long-term therapy is required because of the low interaction with other drugs and the low <\\\\entity><\\\\entity>.', 'Label': ''}\n",
+      "{'id': '40', 'Sentence': 'Our data showed that oxcarbazepine can be a good alternative to traditional <\\\\entity><\\\\entity> in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': ''}\n",
+      "{'id': '41', 'Sentence': 'Our data showed that oxcarbazepine can be a good alternative to traditional antiepileptic agents in the prevention of <\\\\entity><\\\\entity> being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': ''}\n",
+      "{'id': '43', 'Sentence': 'Prevention of early postoperative seizures in patients with primary brain tumors: preliminary experience with <\\\\entity><\\\\entity>.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with supratentorial brain tumors.', 'Label': ''}\n",
+      "{'id': '44', 'Sentence': 'Prevention of <\\\\entity><\\\\entity> in patients with primary brain tumors: preliminary experience with oxcarbazepine.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with supratentorial brain tumors.', 'Label': ''}\n",
+      "{'id': '46', 'Sentence': 'Prevention of early postoperative seizures in patients with primary brain tumors: preliminary experience with <\\\\entity><\\\\entity>.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with supratentorial brain tumors.', 'Label': ''}\n",
+      "{'id': '47', 'Sentence': 'Prevention of early postoperative seizures in patients with <\\\\entity><\\\\entity>: preliminary experience with oxcarbazepine.Early postoperative seizures are defined as those that appear within the first week after surgery and are a well-known and feared complication in patients with supratentorial brain tumors.', 'Label': ''}\n",
+      "{'id': '49', 'Sentence': 'We analyzed the data related to 150 patients harboring supratentorial brain gliomas with the aim to assess the efficacy of <\\\\entity><\\\\entity> in preventing the occurrence or the recurrence of early postoperative seizures and its tolerability when it is rapidly titrated.', 'Label': ''}\n",
+      "{'id': '50', 'Sentence': 'We analyzed the data related to 150 patients harboring supratentorial brain gliomas with the aim to assess the efficacy of oxcarbazepine in preventing the occurrence or the recurrence of <\\\\entity><\\\\entity> and its tolerability when it is rapidly titrated.', 'Label': ''}\n",
+      "{'id': '52', 'Sentence': 'We analyzed the data related to 150 patients harboring supratentorial brain gliomas with the aim to assess the efficacy of <\\\\entity><\\\\entity> in preventing the occurrence or the recurrence of early postoperative seizures and its tolerability when it is rapidly titrated.', 'Label': ''}\n",
+      "{'id': '53', 'Sentence': 'We analyzed the data related to 150 patients harboring <\\\\entity><\\\\entity> with the aim to assess the efficacy of oxcarbazepine in preventing the occurrence or the recurrence of early postoperative seizures and its tolerability when it is rapidly titrated.', 'Label': ''}\n",
+      "{'id': '55', 'Sentence': 'Our data showed that <\\\\entity><\\\\entity> can be a good alternative to traditional antiepileptic agents in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no major side effects during titration and during the first postoperative week) the key factors.', 'Label': ''}\n",
+      "{'id': '56', 'Sentence': 'Our data showed that oxcarbazepine can be a good alternative to traditional antiepileptic agents in the prevention of perioperative seizures being efficacy, ease of use (rapid titration in 3 days, not requiring close plasma concentration monitoring) and good tolerability (no <\\\\entity><\\\\entity> during titration and during the first postoperative week) the key factors.', 'Label': ''}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:3: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "<>:3: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\86138\\AppData\\Local\\Temp\\ipykernel_36996\\3539788675.py:3: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "  def sentence_extract(data, symbol=\"<\\entity><\\entity>\"):\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def sentence_extract(data, symbol=\"<\\entity><\\entity>\"):\n",
+    "    passages = data[\"passages\"]\n",
+    "    entities = data[\"entities\"]\n",
+    "    passage_text = \"\".join([p[\"text\"][0] for p in passages])\n",
+    "    results = []\n",
+    "    sentences = re.split(r'(?<=[.!?])\\s+', passage_text)\n",
+    "    for e in entities:\n",
+    "        start, end = e[\"offsets\"][0]\n",
+    "        entity_text = e[\"text\"][0]\n",
+    "        for s in sentences:\n",
+    "            if passage_text.find(s) <= start < passage_text.find(s) + len(s):\n",
+    "                replaced = s.replace(entity_text, symbol)\n",
+    "                results.append({\n",
+    "                    \"id\": e[\"id\"],\n",
+    "                    \"Sentence\": replaced,\n",
+    "                    \"Label\": e[\"type\"]\n",
+    "                })\n",
+    "                break\n",
+    "    return results\n",
+    "\n",
+    "extracted = sentence_extract(train0)\n",
+    "for item in extracted:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b65371f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def process_dataset(dataset, output_path=\"../datasets/euadr.json\"):\n",
+    "    all_results = []\n",
+    "    for item in dataset:\n",
+    "        results = sentence_extract(item)\n",
+    "        all_results.extend(results)\n",
+    "    with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(all_results, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "process_dataset(dataset[\"train\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "920befd4",
    "metadata": {},
    "outputs": [],
    "source": []
