--- a/python scripts/gad.ipynb
+++ b/python scripts/gad.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ea84bd24",
    "metadata": {},
    "outputs": [
@@ -54,33 +54,22 @@
      "text": [
       "\n",
       "--- Tree Structure ---\n",
-      "├── id: \"1\"\n",
-      "├── document_id: \"1\"\n",
-      "├── text: \"Common polymorphisms in the genes @GENE$ and LOC387715 a...\n",
+      "├── id: \"45\"\n",
+      "├── document_id: \"45\"\n",
+      "├── text: \"The interaction of @GENE$ and ADD3 gene variants in huma...\n",
       "└── labels\n",
       "    └── [0]\n",
-      "        └── \"1\"\n",
+      "        └── \"0\"\n",
       "\n",
       "--- JSON Representation ---\n",
       "{\n",
-      "  \"id\": \"1\",\n",
-      "  \"document_id\": \"1\",\n",
-      "  \"text\": \"Common polymorphisms in the genes @GENE$ and LOC387715 are independently related to @DISEASE$ progression after adjustment for other known AMD risk factors.\",\n",
+      "  \"id\": \"45\",\n",
+      "  \"document_id\": \"45\",\n",
+      "  \"text\": \"The interaction of @GENE$ and ADD3 gene variants in humans is statistically associated with variation in @DISEASE$ pressure, suggesting the presence of epistatic effects among these loci.\",\n",
       "  \"labels\": [\n",
-      "    \"1\"\n",
+      "    \"0\"\n",
       "  ]\n",
       "}\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -143,7 +132,7 @@
     "# Load dataset and apply functions\n",
     "# -------------------------------\n",
     "\n",
-    "train0 = dataset[\"train\"][1]\n",
+    "train0 = dataset[\"train\"][45]\n",
     "print(\"\\n--- Tree Structure ---\")\n",
     "print_tree(train0)\n",
     "\n",
@@ -155,6 +144,72 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fd2df369",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': '45',\n",
+       "  'Sentence': 'The interaction of <\\\\entity>GENE<\\\\entity> and ADD3 gene variants in humans is statistically associated with variation in <\\\\entity>DISEASE<\\\\entity> pressure, suggesting the presence of epistatic effects among these loci.',\n",
+       "  'Label': '0'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def sentence_extract(data, symbol=\"<\\\\entity>\", replace=False):\n",
+    "    s = data[\"text\"]\n",
+    "    entity_pattern = r\"@(.+?)\\$\"\n",
+    "    matches = re.findall(entity_pattern, s)\n",
+    "    if not matches:\n",
+    "        return []\n",
+    "    new_s = s\n",
+    "    for m in matches:\n",
+    "        if replace:\n",
+    "            new_s = new_s.replace(f\"@{m}$\", symbol)\n",
+    "        else:\n",
+    "            new_s = new_s.replace(f\"@{m}$\", f\"{symbol}{m}{symbol}\")\n",
+    "    return [{\n",
+    "        \"id\": data.get(\"id\", None),\n",
+    "        \"Sentence\": new_s,\n",
+    "        \"Label\": data[\"labels\"][0] if data.get(\"labels\") else None\n",
+    "    }]\n",
+    "\n",
+    "# lable 1 means marked gene and disease have positive relationship\n",
+    "# lable 0 means no relationship\n",
+    "\n",
+    "sentence_extract(train0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8e5c48d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "def process_dataset(dataset, output_path=\"../datasets/gad.json\"):\n",
+    "    all_results = []\n",
+    "    for item in dataset:\n",
+    "        results = sentence_extract(item)\n",
+    "        all_results.extend(results)\n",
+    "    with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(all_results, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "process_dataset(dataset[\"train\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75a19bca",
    "metadata": {},
    "outputs": [],
    "source": []
